# manim-meshes

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python_ci.yaml  python_ci_publish.yaml  python_ci_test.yaml
.run/: run_all_tests.run.xml
data/models/: Handle.stl  squirrel.stl  suzanne.ply  tail_topper.stl
docs/videos/: PyramidScene.mov
src/manim_meshes/: __init__.py  decorators.py  exceptions.py  helpers.py  models.py  params.py  templates.py  types.py
src/manim_meshes/data/models/: armadillo.ply
src/manim_meshes/delaunay/: __init__.py  delaunay_criterion.py  divide_and_conquer.py  voronoi.py
src/manim_meshes/models/: __init__.py  faster_models.py  mesh.py  models.py  params.py
src/manim_meshes/models/data_models/: __init__.py  mesh.py
src/manim_meshes/models/manim_models/: __init__.py  basic_mesh.py  opengl_mesh.py  params.py  triangle_mesh.py
src/manim_meshes/shaders/mesh/: frag.glsl  geom.glsl  vert.glsl
src/manim_trimeshes/: __init__.py  models.py  templates.py
tests/: helpers.py  test_helpers.py  test_manim_trimeshes.py  test_mesh.py  test_params.py  test_scene.py  test_templates.py
