[tool.poetry]
name = "manim-meshes"
version = "0.0.4-alpha.0"
description = "2D and 3D Meshes for manim for displaying and educational Purposes."
readme = "README.md"
authors = ["Brizar <martin.steinborn@stud.tu-darmstadt.de>"]
keywords = ["animation", "manim", "trimeshes", "mesh"]
license = "MIT"
repository = "https://github.com/bmmtstb/manim-meshes"

[tool.poetry.dependencies]
python = "3.8.*"
decorator = "^5.0.9"
manim = "^0.15.2"
manimgl = "^1.6.1"
ManimPango = "^0.4.1"
numpy = "*"
trimesh = "^3.12.5"

[tool.poetry.dev-dependencies]
meshio = "^5.3.4"
pylint = "*"
pytest = "^7.1.2"
typing = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_meshes" = "module:object.attr"
